# anno

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
bench/: Cargo.toml
bench/results/: run-20260416-202206.json  run-20260416-202209.json  run-continue-20260416-203631.json
bench/src/: api_client.rs  echo_server.rs  harness.rs  main.rs  metrics.rs  traffic_gen.rs
bench/src/tests/: concurrent.rs  fairness.rs  hol.rs  large_packet.rs  latency.rs  memory.rs  mod.rs  tcp_throughput.rs  udp_throughput.rs  window_saturation.rs
client/: Cargo.toml
client/src/: connection.rs  forward.rs  http_proxy.rs  main.rs  reconnect.rs
common/: Cargo.toml
common/src/: lib.rs  message.rs  mux.rs  protocol.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  clients.ts  http.ts  index.ts  registry.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Clients.tsx  Dashboard.tsx  Login.tsx
server/: Cargo.toml
server/src/: api.rs  auth.rs  control.rs  directory.rs  frontend.rs  listener.rs  main.rs  oidc.rs  proxy.rs  ratelimit.rs  registry.rs  session.rs  state.rs
tests/: functional_test.sh
