[package]
name = "anno-bench"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "anno-bench"
path = "src/main.rs"

[dependencies]
anno-common = { path = "../common" }
tokio = { version = "1.36", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros", "process", "signal", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hdrhistogram = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
rand = "0.8"
futures = "0.3"
libc = "0.2"
