[package]
name = "anno-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anno-client"
path = "src/main.rs"

[dependencies]
anno-common = { path = "../common" }
tokio = { version = "1.36", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros", "signal"] }
socket2 = { version = "0.5", features = ["all"] }
rand = "0.8"
metrics = "0.24.3"
tokio-util = { version = "0.7", features = ["codec", "rt"] }
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
httparse = "1.8"
dashmap = "5.5"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
