[package]
name = "anno-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anno-server"
path = "src/main.rs"

[dependencies]
anno-common = { path = "../common" }
tokio = { version = "1.36", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "timeout", "limit"] }
tower = { version = "0.4", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
futures = "0.3"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
bcrypt = "0.15"
dotenvy = "0.15"
uuid = { version = "1.8", features = ["v4"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2.0"
